--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -164,7 +164,7 @@ footer::before {
 @media screen and (min-width: 40em) {
   .p-left h3,
 .p-right h3 {
-    padding: 2rem 0 0 0;
+    padding: 2rem 1rem 0 1rem;
   }
 }
 
