--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -219,6 +219,26 @@ footer::before {
     font-size: 21.5px;
   }
 }
+#tabs li a .hover-underline-animation {
+  display: inline-block;
+  position: relative;
+}
+#tabs li a .hover-underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #2b241d;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+#tabs li a .hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
 @media screen and (min-width: 64em) {
   #tabs li:nth-child(1) a {
     border-bottom-left-radius: 10px;
