--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -46,23 +46,23 @@
         .hover-underline-animation {
           display: inline-block;
           position: relative;
-        }
-        .hover-underline-animation:after {
-          content: '';
-          position: absolute;
-          width: 100%;
-          transform: scaleX(0);
-          height: 2px;
-          bottom: 0;
-          left: 0;
-          background-color: $color1;
-          transform-origin: bottom right;
-          transition: transform 0.25s ease-out;
-        }
-        
-        .hover-underline-animation:hover:after {
-          transform: scaleX(1);
-          transform-origin: bottom left;
+          &:after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: $color1;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+          }
+          &:hover:after,
+          &:focus:after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+          }
         }
       }
       &:nth-child(1) a {
