--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -27,6 +27,7 @@
     background-image: url(../../images/template/paper.png);
     background-blend-mode: screen;
     background-color: $color3;
+    font-size: 13px;
     .title-bar-title,
     .menu-icon {
         color: $white;
