--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,114 +5,125 @@
     @extend %active;
 }
 
-#orbit-heading {
-    @include medium_and_up() {
-        @include setbox(null, null, 0 1rem, 50px auto 1rem auto);
-    }
-    @include g_container() {
-        @include setbox(1200px, null, null, null);
-    }
-}
 
-.orbit {
-    max-width: 1200px;
-    @include setbox(null, null, null, auto auto 1rem auto);
-    .orbit-container img {
-        max-height: 700px;
+.hover {
+  @include setbox(null, null, null, 1rem auto);
+  box-shadow: 0 -1px rgba($color1, 0.1);
+  @include large_and_up {
+  @include setbox(null, null, null, 1rem auto 21vh auto);
+  box-shadow: 0 1px rgba($color1, 0.1), 0 -1px rgba($color1, 0.1);
+  }
+ 
+  .hover-box {
+    position: relative;
+    display: inline-block;
+    margin: 20px;
+    max-width: 170px;
+    width: 100%;
+    *,
+    &:before,
+    &:after {
+      box-sizing: border-box;
+      transition: all 0.3s linear;
     }
-}
-
-#tabs {
-    @include setbox(null, fit-content, null, null);
-    border-top: 1px solid $white;
-    @include large_and_up {
+    &:before,
+    &:after {
+      box-sizing: border-box;
+      border-radius: 50%;
+      content: "";
       position: absolute;
-      z-index: 999;
+      top: 0px;
+      bottom: 0px;
+      left: 0px;
+      right: 0px;
+      z-index: -1;
+      border: 2px solid darkShift($color1);
+      border-color: transparent darkShift($color1);
     }
-    li {
-      a {
-        background-color: lightShift($color3);
-        background-image: url(../../images/template/paper.png);
-        background-blend-mode: screen;
-        outline: none;
-        @include setbox(100%, null, 0.2rem 0.5rem, 0);
-        h3 {
-          @include box();
-          font-size: 16px;
-          @include large_and_up {
-            font-size: 21.5px;
-          }
-        }
-        .hover-underline-animation {
-          display: inline-block;
-          position: relative;
-          &:after {
-            content: "";
-            position: absolute;
-            width: 100%;
-            transform: scaleX(0);
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: $color1;
-            transform-origin: bottom right;
-            transition: transform 0.25s ease-out;
-          }
-          &:hover:after,
-          &:focus:after {
-            transform: scaleX(1);
-            transform-origin: bottom left;
-          }
-        }
-      }
-      &:nth-child(1) a {
-        @include large_and_up {
-          border-bottom-left-radius: 10px;
-        }
-      }
-      &:nth-child(6) a {
-        @include large_and_up {
-          border-bottom-right-radius: 10px;
-        }
-      }
+    img {
+      max-width: 100%;
+      backface-visibility: hidden;
+      vertical-align: top;
+      border-radius: 50%;
+      padding: 9px;
+      opacity: 0.7;
     }
-    .tabs-title.is-active a {
-      background-color: $color1;
-      background-image: none;
-      h3 {
-        color: $white;
-      }
+    figcaption {
+      position: absolute;
+      top: 5px;
+      bottom: 5px;
+      left: 5px;
+      right: 5px;
+      border-radius: 50%;
+    }
+    h3 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      color: lightShift($color1);
+      font-size: 16px;
+      padding: 0 5%;
+      font-weight: 500;
+      background-color: lightShift($color3);
+      border-radius: 16px;
+    }
+    a {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+    }
+    &:hover img, &:focus img{
+      opacity: 1;
+    }
+    &:hover:before,
+    &:hover:after,
+    &:focus:before,
+    &:focus:after {
+      border-width: 10px;
+    }
+    &:hover:before, &:focus:before {
+      transform: rotate(45deg);
+    }
+    &:hover:after, &:focus:after{
+      transform: rotate(-45deg);
     }
   }
-  
-  .tabs-content {
-    background-color: $transparent;
-    border: none;
+}
+
+.tabs-content {
+  background-color: $transparent;
+  box-shadow: 0 -1px rgba($color1, 0.2);
+  border: none;
+  @include box();
+  .tabs-panel.is-active {
+    min-height: 79vh;
     @include box();
-    .tabs-panel.is-active {
-      min-height: 79vh;
-      @include box();
-      @include medium_and_up {
-        position: relative;
-        &::before {
-          position: absolute;
-          content: "";
-          top: 0;
-          right: 75%;
-          @include large_and_up {
-            right: 83.34%;
-          }
-          bottom: 0;
-          left: 0;
-          background-image: url(../../images/gallery/side-1.png);
-          border-right: 1px solid $white;
+    @include medium_and_up {
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        right: 75%;
+        @include large_and_up {
+          right: 83.34%;
         }
+        bottom: 0;
+        left: 0;
+        background-image: url(../../images/home/side-1.png);
+        box-shadow: 1px 0 rgba($color1, 0.2);
       }
     }
   }
+}
   
   .sticky-ul {
-    background-image: url(../../images/gallery/side.png);
+    background-image: url(../../images/home/side.png);
     background-size: auto;
     background-repeat: no-repeat;
     background-position: top right;
