--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -264,7 +264,7 @@ footer::before {
   padding: 0;
 }
 .tabs-content .tabs-panel.is-active {
-  min-height: 79vh;
+  min-height: 85.8vh;
   margin: 0;
   padding: 0;
 }
@@ -295,12 +295,13 @@ footer::before {
   background-repeat: no-repeat;
   background-position: top right;
   color: #2b241d;
-  height: 221px;
   padding: 1rem 1rem 0 1rem;
   font-size: 14.5px;
 }
 @media screen and (min-width: 40em) {
   .sticky-ul {
+    height: 221px;
+    padding: 1rem 1rem 0 1rem;
     position: sticky;
     top: 0;
   }
