--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,13 +12,15 @@
     @include setbox(null, null, null, 1rem auto 21vh auto);
     box-shadow: 0 1px rgba($color1, 0.1), 0 -1px rgba($color1, 0.1);
   }
-
+  .tabs-title > a[aria-selected="true"],
+  .tabs-title a:hover {
+    background: transparent;
+  }
   .hover-box {
     position: relative;
     display: inline-block;
-    margin: 20px;
     max-width: 170px;
-    width: 100%;
+    @include setbox(100%, null, null, null);
     *,
     &:before,
     &:after {
@@ -44,7 +46,7 @@
       backface-visibility: hidden;
       vertical-align: top;
       border-radius: 50%;
-      padding: 9px;
+      @include setbox(null, null, 9px, null);
       opacity: 0.7;
     }
     figcaption {
@@ -63,18 +65,10 @@
       z-index: 1;
       color: lightShift($color1);
       font-size: 14px;
-      padding: 0 5%;
+      @include setbox(null, null, 0 5%, null);
       font-weight: 500;
       background-color: lightShift($color3);
       border-radius: 16px;
-    }
-    a {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 1;
     }
     &:hover img,
     &:focus img {
