--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -190,11 +190,13 @@ footer::before {
 }
 .media-object .media-object-section:nth-child(1) img {
   width: 100%;
+  margin: auto auto 1rem auto;
   border-radius: 10px;
 }
 @media screen and (min-width: 40em) {
   .media-object .media-object-section:nth-child(1) img {
     width: calc(100% - 0.5rem);
+    margin: auto;
   }
 }
 @media screen and (min-width: 64em) {
