--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -33,6 +33,7 @@
         color: $white;
     }
     #my-svg-m {
+        display: inline-block;
         height: 50px;
         width: 50px;
     }
