--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -26,16 +26,6 @@
         @include setbox(null, null, null, auto auto 50px auto);
         box-shadow: 0 -1px rgba($color1, 0.1), 0 1px rgba($color1, 0.1);
     }
-    .media-object-section:nth-child(1) img {
-        @include setbox(100%, null, null, auto auto 1rem auto);
-        @include medium_and_up() {
-            @include setbox( calc(100% - 0.5rem), null, null, auto );
-        }
-        @include large_and_up() {
-            @include setbox(100%, null, null, null);
-        }
-        border-radius: 17px;
-    }
     .media-object-section {
         &:nth-child(2) {
             @include setbox(null, null, 0, null);
@@ -47,6 +37,16 @@
             @include setbox(null, null, 0, null);
             @include large_and_up() {
                 @include setbox(null, null, 3%, null);
+            }
+            img {
+                @include setbox(100%, null, null, auto auto 1rem auto);
+                @include medium_and_up() {
+                    @include setbox( calc(100% - 0.5rem), null, null, auto );
+                }
+                @include large_and_up() {
+                    @include setbox(100%, null, null, null);
+                }
+                border-radius: 17px;
             }
         }
     }
