--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -17,7 +17,7 @@ body::before {
   left: 0;
   z-index: -999;
   background-blend-mode: screen;
-  opacity: 0.6;
+  opacity: 0.7;
   background-color: rgba(225, 202, 111, 0.125);
   background-image: url(../../images/template/body-mobile.jpg);
   background-position: center center;
@@ -110,7 +110,7 @@ footer {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
-  background-color: #e1ca6f;
+  background-color: #d8ba45;
   color: #2b241d;
   position: relative;
   z-index: 0;
