--- a/assets/scss/template/_footer.scss
+++ b/assets/scss/template/_footer.scss
@@ -2,7 +2,7 @@ footer {
     background-image: url(../../images/template/paper.png);
     background-blend-mode: screen;
     padding-top: 15px;
-    background-color: $color3;
+    background-color: darkShift($color3);
     color: $color1;
     position: relative;
     z-index: 0;
