--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -89,6 +89,14 @@ main i {
   background-color: #e1ca6f;
   background-blend-mode: screen;
 }
+.top-bar .top-bar-right {
+  animation: slideIn0 1s ease-in-out;
+}
+@media screen and (min-width: 40em) {
+  .top-bar .top-bar-right {
+    animation: none;
+  }
+}
 .top-bar .top-bar-right ul {
   background: transparent;
 }
@@ -102,8 +110,8 @@ main i {
 }
 .top-bar .top-bar-left #my-svg {
   display: inline-block;
-  height: 100px;
   width: 235px;
+  height: 100px;
 }
 
 .title-bar {
@@ -112,16 +120,31 @@ main i {
   background-color: #e1ca6f;
   font-size: 13px;
 }
-.title-bar .title-bar-title,
-.title-bar .menu-icon {
+.title-bar .title-bar-title {
   color: #f8f8ff;
+  width: nill;
+  height: 50px;
+  padding: 25px 0 0 0;
 }
 .title-bar #my-svg-m {
   display: inline-block;
-  height: 50px;
   width: 50px;
+  height: 50px;
 }
 
+@keyframes slideIn0 {
+  0% {
+    margin-top: -38.391px;
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
 footer {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
