--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -2,21 +2,15 @@
     background-image: url(../../images/template/paper.png);
     background-color: $color3;
     background-blend-mode: screen;
-    .top-bar-right {
-        animation: slideIn0 1s ease-in-out;
-        @include medium_and_up() {
-            animation: none;
-        }
-        ul {
-            background: $transparent;
-            li a {
-                color: $color1;
-                @include box(null, 0.5rem);
-                &:hover,
-                &:focus {
-                    color: $white;
-                    text-shadow: none;
-                }
+    .top-bar-right ul {
+        background: $transparent;
+        li a {
+            color: $color1;
+            @include box(null, 0.5rem);
+            &:hover,
+            &:focus {
+                color: $white;
+                text-shadow: none;
             }
         }
     }
@@ -40,19 +34,5 @@
     #my-svg-m {
         display: inline-block;
         @include setbox(50px, 50px, null, null);
-    }
-}
-
-@keyframes slideIn0 {
-    0% {
-        margin-top: -38.391px;
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-        margin-top: 0;
     }
 }
