--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -22,6 +22,10 @@
     }
 }
 
+.color {
+    color: #2b241d;
+}
+
 .title-bar {
     background-image: url(../../images/template/paper.png);
     background-blend-mode: screen;
