--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -114,16 +114,17 @@ main i {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   background-color: #e1ca6f;
-  font-size: 13px;
 }
 .title-bar .title-bar-title {
-  color: #f8f8ff;
-  width: 25px;
   height: 50px;
-  padding: 25px 0 0 0;
+  color: #f8f8ff;
+  font-size: 16px;
 }
 .title-bar .title-bar-title:hover, .title-bar .title-bar-title:focus {
   color: #2b241d;
+}
+.title-bar .title-bar-title i {
+  position: absolute;
 }
 .title-bar #my-svg-m {
   display: inline-block;
