--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -157,7 +157,7 @@ section {
     top: 0;
     @include box(0 2rem 0 0, null);
     i {
-      font-size: medium;
+      font-size: 20px;
       color: $color4;
       &:hover,
       &:focus {
