--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -155,9 +155,17 @@ section {
   .top-link {
     position: sticky;
     top: 0;
-    @include box(0 2rem 0 0, null);
+  right: 10px;
+    @include box(0 1.75rem 0 0, null);
+  @include medium_and_up {
+  top: 10px;
+  @include box(0 2.5rem 0 0, null);
+  }
     i {
-      font-size: 20px;
+  font-size: medium;
+  @include medium_and_up {
+        font-size: 20px;
+   }
       color: $color4;
       &:hover,
       &:focus {
