--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -259,11 +259,16 @@ footer::before {
   transform: translate(-50%, -50%);
   z-index: 1;
   color: #0d0b08;
-  font-size: 14px;
+  font-size: 12px;
   padding: 0 5%;
   font-weight: 500;
   background-color: #eada99;
   border-radius: 16px;
+}
+@media screen and (min-width: 40em) {
+  .hover .hover-box h3 {
+    font-size: 14px;
+  }
 }
 .hover .hover-box:hover img, .hover .hover-box:focus img {
   opacity: 1;
