--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -19,15 +19,14 @@ main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
 }
 
 @font-face {
-  font-family: "Arial Unicode";
-  src: url("./Fonts/Arial Unicode.ttf");
+  font-family: Montserrat-Regular;
+  src: url("./Fonts/Montserrat-Regular.ttf");
 }
 /* template */
 body {
   max-width: 1920px;
   margin: auto;
   position: relative;
-  font-family: "Arial Unicode";
 }
 body::before {
   position: absolute;
@@ -53,14 +52,6 @@ body::before {
   }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Arial Unicode";
-}
-
 h1 {
   font-size: inherit;
   margin: 0;
@@ -71,6 +62,7 @@ h2 {
   margin: 1rem auto;
   color: #493e32;
   font-style: oblique;
+  font-family: Montserrat-Regular;
   text-shadow: 0 0 2.5px #2b241d;
 }
 @media screen and (min-width: 40em) {
