--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,11 +6,16 @@
   font-family: Montserrat-Regular;
   src: url("./Fonts/Montserrat-Regular.ttf");
 }
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url("./Fonts/OpenSans-Regular.ttf");
+}
 /* template */
 body {
   max-width: 1920px;
   margin: auto;
   position: relative;
+  font-family: OpenSans-Regular;
 }
 body::before {
   position: absolute;
@@ -40,6 +45,7 @@ h1 {
   font-size: inherit;
   margin: 0;
   padding: 0;
+  font-family: OpenSans-Regular;
 }
 
 h2 {
@@ -59,6 +65,7 @@ h3,
 h4,
 h5 {
   color: #493e32;
+  font-family: OpenSans-Regular;
 }
 
 main {
