--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -22,11 +22,16 @@ main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
   font-family: Montserrat-Regular;
   src: url("./Fonts/Montserrat-Regular.ttf");
 }
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url("./Fonts/OpenSans-Regular.ttf");
+}
 /* template */
 body {
   max-width: 1920px;
   margin: auto;
   position: relative;
+  font-family: OpenSans-Regular;
 }
 body::before {
   position: absolute;
@@ -56,6 +61,7 @@ h1 {
   font-size: inherit;
   margin: 0;
   padding: 0;
+  font-family: OpenSans-Regular;
 }
 
 h2 {
@@ -75,6 +81,7 @@ h3,
 h4,
 h5 {
   color: #493e32;
+  font-family: OpenSans-Regular;
 }
 
 main {
