--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,11 +13,16 @@
   font-family: Montserrat-Regular;
   src: url("./Fonts/Montserrat-Regular.ttf");
 }
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url("./Fonts/OpenSans-Regular.ttf");
+}
 /* template */
 body {
   max-width: 1920px;
   margin: auto;
   position: relative;
+  font-family: OpenSans-Regular;
 }
 body::before {
   position: absolute;
@@ -47,6 +52,7 @@ h1 {
   font-size: inherit;
   margin: 0;
   padding: 0;
+  font-family: OpenSans-Regular;
 }
 
 h2 {
@@ -66,6 +72,7 @@ h3,
 h4,
 h5 {
   color: #493e32;
+  font-family: OpenSans-Regular;
 }
 
 main {
