--- a/assets/css/notfound.css
+++ b/assets/css/notfound.css
@@ -36,11 +36,16 @@ main input[type=submit]:hover, main input[type=submit]:focus {
   font-family: Montserrat-Regular;
   src: url("./Fonts/Montserrat-Regular.ttf");
 }
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url("./Fonts/OpenSans-Regular.ttf");
+}
 /* template */
 body {
   max-width: 1920px;
   margin: auto;
   position: relative;
+  font-family: OpenSans-Regular;
 }
 body::before {
   position: absolute;
@@ -70,6 +75,7 @@ h1 {
   font-size: inherit;
   margin: 0;
   padding: 0;
+  font-family: OpenSans-Regular;
 }
 
 h2 {
@@ -89,6 +95,7 @@ h3,
 h4,
 h5 {
   color: #493e32;
+  font-family: OpenSans-Regular;
 }
 
 main {
