--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -2,3 +2,8 @@
     font-family: Montserrat-Regular;
     src: url("./Fonts/Montserrat-Regular.ttf");
 }
+
+@font-face {
+    font-family: OpenSans-Regular;
+    src: url("./Fonts/OpenSans-Regular.ttf");
+}
