--- a/assets/scss/template/_styles.scss
+++ b/assets/scss/template/_styles.scss
@@ -4,6 +4,7 @@ body {
     max-width: 1920px;
     @include setbox(null, null, null, auto);
     position: relative;
+    font-family: OpenSans-Regular;
     &::before {
         position: absolute;
         content: "";
@@ -30,6 +31,7 @@ body {
 h1 {
     font-size: inherit;
     @include box();
+    font-family: OpenSans-Regular;
 }
 
 h2 {
@@ -47,6 +49,7 @@ h3,
 h4,
 h5 {
     color: darkShift($color1);
+    font-family: OpenSans-Regular;
 }
 
 main {
