--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -139,6 +139,9 @@ footer {
   position: relative;
   z-index: 0;
 }
+footer #right {
+  font-size: smaller;
+}
 footer li a {
   color: #2b241d;
   padding: 0.5rem;
@@ -190,6 +193,10 @@ footer::before {
 }
 
 /* about */
+.fi-pencil {
+  margin: 0 0 1rem 0;
+}
+
 @media screen and (min-width: 40em) {
   .p-left p,
 .p-right p {
