--- a/assets/scss/template/_footer.scss
+++ b/assets/scss/template/_footer.scss
@@ -6,7 +6,7 @@ footer {
     color: $color1;
     position: relative;
     z-index: 0;
-    #right {
+    ul + ul {
         font-size: smaller;
     }
     li a {
