--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,5 @@
 main .tabs li a h3, main a {
-  color: #4E7F3D;
+  color: #395d2c;
 }
 main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
   color: #566CAE;
