--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -50,7 +50,7 @@ h1 {
 
 h2 {
   margin: 1rem auto;
-  color: #493e32;
+  color: #463b2f;
   font-style: oblique;
   font-family: Montserrat-Regular;
   text-shadow: 0 0 2.5px #2b241d;
@@ -64,7 +64,7 @@ h2 {
 h3,
 h4,
 h5 {
-  color: #493e32;
+  color: #463b2f;
   font-family: OpenSans-Regular;
 }
 
@@ -134,7 +134,7 @@ footer {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
-  background-color: #d8ba45;
+  background-color: #d9bc49;
   color: #2b241d;
   position: relative;
   z-index: 0;
