--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,5 @@
 main .tabs li a h3, main a {
-  color: #395d2c;
+  color: #345428;
 }
 main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
   color: #566CAE;
@@ -66,7 +66,7 @@ h1 {
 
 h2 {
   margin: 1rem auto;
-  color: #493e32;
+  color: #463b2f;
   font-style: oblique;
   font-family: Montserrat-Regular;
   text-shadow: 0 0 2.5px #2b241d;
@@ -80,7 +80,7 @@ h2 {
 h3,
 h4,
 h5 {
-  color: #493e32;
+  color: #463b2f;
   font-family: OpenSans-Regular;
 }
 
@@ -150,7 +150,7 @@ footer {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
-  background-color: #d8ba45;
+  background-color: #d9bc49;
   color: #2b241d;
   position: relative;
   z-index: 0;
@@ -216,7 +216,7 @@ main .tabs {
   box-shadow: 0 1px rgba(43, 36, 29, 0.1);
 }
 main .tabs li {
-  background-color: rgba(138, 138, 138, 0.05);
+  background-color: rgba(138, 138, 138, 0.1);
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
 }
@@ -267,7 +267,7 @@ main .tabs .tabs-title > a[aria-selected=true] {
 }
 blockquote,
 cite {
-  color: #717171;
+  color: #6a6a6a;
 }
 
 /*# sourceMappingURL=contact.css.map */
