--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -1,6 +1,6 @@
 /* search */
 main a {
-  color: #395d2c;
+  color: #345428;
 }
 main a:hover, main a:focus {
   color: #566CAE;
@@ -8,7 +8,7 @@ main a:hover, main a:focus {
 
 main h1 {
   margin: 1rem auto;
-  color: #493e32;
+  color: #463b2f;
   font-style: oblique;
   text-shadow: 0 0 2.5px #2b241d;
   font-size: 1.25rem;
@@ -80,7 +80,7 @@ h1 {
 
 h2 {
   margin: 1rem auto;
-  color: #493e32;
+  color: #463b2f;
   font-style: oblique;
   font-family: Montserrat-Regular;
   text-shadow: 0 0 2.5px #2b241d;
@@ -94,7 +94,7 @@ h2 {
 h3,
 h4,
 h5 {
-  color: #493e32;
+  color: #463b2f;
   font-family: OpenSans-Regular;
 }
 
@@ -164,7 +164,7 @@ footer {
   background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
-  background-color: #d8ba45;
+  background-color: #d9bc49;
   color: #2b241d;
   position: relative;
   z-index: 0;
